--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,9 @@
                 </div>
                 <div class="contact-info" >
                     <h3>Contact Information</h3>
-                    <p><i class="fa-solid fa-phone"></i>    +62 000 000</p> 
-                    <p><i class="fa-solid fa-envelope"></i>     xxxxx@gmail.com</p>
-                    <p><i class="fa-solid fa-map-pin"></i>     Karawang, Karawang, Karawang</p>
+                    <p><i class="fa-solid fa-phone"></i>    +628567891011<p> 
+                    <p><i class="fa-solid fa-envelope"></i>     modishype@gmail.com</p>
+                    <p><i class="fa-solid fa-map-pin"></i>     Karwang JawaBarat Indonesia</p>
                 </div>
             </div>
         </div>
