--- a/contact.html
+++ b/contact.html
@@ -6,24 +6,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Contact - MODIS HYPE</title>
-    <style>
-        /* Gaya untuk tombol kembali */
-        .back-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #d3d3d3; /* Warna abu-abu */
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-    </style>
 </head>
 <body>
-    <!-- Tombol Kembali -->
-     <header>
+    <header>
         <div class="container">
             <div class="logo">
                 <img src="logo_v5-removebg-preview.png" alt="MODIS HYPE Logo">
@@ -47,24 +32,27 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <h3>Send us a message</h3>
-                    <form>
+                    <form action="submit_contact_form" method="POST">
                         <div class="form-group">
-                            <input type="text" name="name" placeholder="Your Name">
+                            <input type="text" name="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" placeholder="Your Email">
+                            <input type="email" name="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
-                            <textarea name="message" placeholder="Your Message"></textarea>
+                            <textarea name="message" placeholder="Your Message" required></textarea>
                         </div>
                         <button type="submit">Send Message</button>
-                    </form> 
+                    </form>
                 </div>
-                <div class="contact-info" >
+                <div class="contact-info">
                     <h3>Contact Information</h3>
-                    <p><i class="fa-solid fa-phone"></i>    +628567891011<p> 
-                    <p><i class="fa-solid fa-envelope"></i>     modishype@gmail.com</p>
-                    <p><i class="fa-solid fa-map-pin"></i>     Karwang JawaBarat Indonesia</p>
+                    <div class="social-media">
+                        <a href="https://www.facebook.com/profile.php?id=100022736889423" target="_blank"><i class="fab fa-facebook-f facebook-icon"></i></a>
+                        <a href="https://www.instagram.com/mahasiswa_gabutnatural/" target="_blank"><i class="fab fa-instagram instagram-icon"></i></a>
+                        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in linkedin-icon"></i></a>
+                        <a href="https://wa.me/+6285774226499" target="_blank"><i class="fab fa-whatsapp whatsapp-icon"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,10 +65,5 @@
     </footer>
 
     <script src="darkmode.js"></script>
-    <script>
-        function goHome() {
-            window.location.href = 'index.html'; // Ganti 'index.html' dengan URL halaman home Anda
-        }
-    </script>
 </body>
 </html>
